# miniRedis-demo

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Plan.md  README.md  docker-compose.yml  pyproject.toml  seed_mongo.py
demo_benchmark/: __init__.py  app.py  benchmark.py  config.py  metrics.py  mini_redis.py  mongo_backend.py  qa.py  seed.py  service.py
demo_benchmark/routes/: __init__.py  api.py  pages.py  shared.py
docs/: 웹_대시보드_설명.md
static/: app.js  index.html  styles.css
tests/: test_dashboard.py
